--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native": "^0.73.6",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-screens": "^4.0.0",
     "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.6"
   },
