--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "expo-keep-awake": "~12.8.1",
     "expo-linear-gradient": "~12.7.1",
     "expo-modules-core": "~1.11.14",
-    "expo-sensors": "~12.9.1",
     "expo-system-ui": "~2.9.4",
     "firebase": "^11.7.1",
     "metro": "^0.80.12",
@@ -56,8 +55,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "clean": "expo start --clear"
   }
